oriterm_core/tests/vttest/snapshots/vttest__menu5__120x40_05_led_01.snap
---
source: oriterm_core/tests/vttest/menu5.rs
expression: text
---
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
These LEDs ("lamps") on the keyboard should be on: L1 L2 L3 L4                                                          
                                                                                                                        
Push <RETURN>
